[iOS] Cannot run run-webkit-tests with public SDK; LayoutTestRelay fails to build https://bugs.webkit.org/show_bug.cgi?id=145319

Reviewed by David Kilzer.

Add SPI wrapper header for CoreSimulator and update the source files to reference
it instead of directly referencing the CoreSimulator header.

* LayoutTestRelay/LayoutTestRelay.xcodeproj/project.pbxproj:
* LayoutTestRelay/LayoutTestRelay/CoreSimulatorSPI.h: Added.
* LayoutTestRelay/LayoutTestRelay/LTRelayController.m:
* LayoutTestRelay/LayoutTestRelay/main.m:

Canonical link: https://commits.webkit.org/163946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185478 268f45cc-cd09-0410-ab3c-d52691b4dbfc